浏览器扫码登录

--- a/teaching_helper/logging.ini
+++ b/teaching_helper/logging.ini
@@ -14,7 +14,7 @@ handlers=fileHandler,consoleHandler
 [handler_fileHandler]
 class=logging.handlers.RotatingFileHandler
 ;args=('/var/log/th/teaching_helper.log', 'a', 31457280, 5)
-args=(r'D:\teaching_helper.log', 'a', 31457280, 5)
+args=(r'/home/ubuntu/teaching_helper.log', 'a', 31457280, 5)
 level=DEBUG
 formatter=simpleFormatter
 
